// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox/presenters/CheckPresenter renders with all props 1`] = `
.emotion-1 {
  display: none;
}

.emotion-2 {
  position: relative;
  display: block;
  color: transparent;
  border: 1px solid #BEC8D2;
  background-color: #ffffff;
  text-align: center;
  font-size: 25px;
  line-height: 14px;
  height: 16px;
  width: 16px;
  border-radius: 3px;
  cursor: default;
  border-color: rgb(190,200,210);
  box-shadow: none;
  pointer-events: none;
  border-style: dotted;
}

.emotion-2 svg {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}

.emotion-2 svg * {
  fill: #ffffff;
}

.emotion-2 svg * {
  fill: #D1DDEE;
}

.emotion-0 {
  display: block;
}

<span
  className="emotion-2"
>
  <span
    className="emotion-0"
  >
    <svg
      height="8"
      viewBox="0 0 10 8"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Group 4
      </title>
      <path
        d="M3.95 7.588L1 4.743l.915-.946 2.02 1.935L8.537 1l.933.928z"
        fill="#D1DDEE"
        fillRule="evenodd"
        stroke="#D1DDEE"
        strokeWidth=".5"
      />
    </svg>
  </span>
  <span
    className="emotion-1"
  >
    <svg
      height="2"
      viewBox="0 0 8 2"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Rectangle 11
      </title>
      <path
        d="M0 0h8v2H0z"
        fill="#FFF"
        fillRule="evenodd"
      />
    </svg>
  </span>
</span>
`;

exports[`checkbox/presenters/CheckPresenter renders without props 1`] = `
.emotion-2 {
  position: relative;
  display: block;
  color: transparent;
  border: 1px solid #BEC8D2;
  background-color: #ffffff;
  text-align: center;
  font-size: 25px;
  line-height: 14px;
  height: 16px;
  width: 16px;
  border-radius: 3px;
  cursor: default;
}

.emotion-2 svg {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}

.emotion-2 svg * {
  fill: #ffffff;
}

.emotion-0 {
  display: none;
}

<span
  className="emotion-2"
>
  <span
    className="emotion-0"
  >
    <svg
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3z"
      />
    </svg>
  </span>
  <span
    className="emotion-0"
  >
    <svg
      height="2"
      viewBox="0 0 8 2"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Rectangle 11
      </title>
      <path
        d="M0 0h8v2H0z"
        fill="#FFF"
        fillRule="evenodd"
      />
    </svg>
  </span>
</span>
`;
